--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <button id="toggle-sauve-fixed" class="toggle-btn active" data-layer="hiroshima_sauve_layer">
         <svg width="24" height="24" viewBox="0 0 24 24">
           <!-- Couleur pour "Hiroshima sauvé" définie dans le JS (#000000) -->
-          <circle cx="12" cy="12" r="10" fill="#66CDAA"/>
+          <circle cx="12" cy="12" r="10" fill="#2E8B57"/>
         </svg>
         <span class="toggle-label">Hiroshima sauvé</span>
       </button>
@@ -74,7 +74,7 @@
       <button id="toggle-naga-sauve-fixed" class="toggle-btn active" data-layer="nagasaki_sauve_layer">
         <svg width="24" height="24" viewBox="0 0 24 24">
           <!-- Couleur pour "Nagasaki sauvé" définie dans le JS (#000000) -->
-          <circle cx="12" cy="12" r="10" fill="#3CB371"/>
+          <circle cx="12" cy="12" r="10" fill="#2E8B57"/>
         </svg>
         <span class="toggle-label">Nagasaki sauvé</span>
       </button>
@@ -113,7 +113,7 @@
   <span style="background-color: #FFA500; color: #000; padding: 2px 5px; border-radius: 2px;">orange</span> 
   représentent les parties partiellement endommagées,
   tandis que celles en 
-  <span style="background-color: #66CDAA; color: #fff; padding: 2px 5px; border-radius: 2px;">vert</span> 
+  <span style="background-color: #2E8B57; color: #fff; padding: 2px 5px; border-radius: 2px;">vert</span> 
   montrent les quartiers sauvés.
 </p>
 
@@ -132,7 +132,7 @@
   <span style="background-color: #FFA500; color: #fff; padding: 2px 5px; border-radius: 2px;">orange</span>
   représentent les zones ravagées par l'incendie, 
   et les zones en 
-  <span style="background-color: #3CB371; color: #fff; padding: 2px 5px; border-radius: 2px;">vert</span>
+  <span style="background-color: #2E8B57; color: #fff; padding: 2px 5px; border-radius: 2px;">vert</span>
   montrent les quartiers sauvés.
 </p>
 
