--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
       <section class="step" id="conclusion">
         <!-- Bandeau de césure pleine largeur -->
         <div class="full-width-banner">
-          <img src="https://raw.githubusercontent.com/SIGATNguyen/Web_carto/refs/heads/main/carte_large_V2.png" alt="Dôme de Genbaku, Hiroshima" />
-          <div class="image-credit">Dôme de Genbaku, symbole de la paix à Hiroshima</div>
+          <img src="https://raw.githubusercontent.com/SIGATNguyen/Web_carto/main/carte_large_V3.png" alt="Illustration Thomas" />
+          <div class="image-credit">Illustration Thomas</div>
         </div>
         
         <!-- Contenu centré avec texte justifié -->
