--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <div class="intro-meta">
                 <div class="meta-info">
                   <small class="meta-date">PUBLIÉ LE 23 FÉVRIER 2025</small>
-                  <small class="byline">Par Bureau d'Études Historiques</small>
+                  <small class="byline">Par M2 SIGAT</small>
                 </div>
                 <div class="scroll-indicator">
                   <span>Défiler pour découvrir</span>
