--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
           <div class="footer-info">
             <div class="footer-section">
               <h3>À propos</h3>
-              <p>© 2025 MASTER SIGAT - Université Rennes 2</p>
+              <p><a href="https://esigat.wordpress.com/" class="source-link">C© 2025 MASTER SIGAT - Université Rennes 2</a></p>
               <p>En partenariat avec Ouest-France</p>
             </div>
             <div class="footer-section">
